--- a/pokedex-talent/src/index.css
+++ b/pokedex-talent/src/index.css
@@ -1,3 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Livvic:wght@300&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
+.divGeral {
+  display: flex;
+  flex-direction: column;
+}
+
+.logo {
+  width: 40%;
+  height: 40%;
+}
+
+.inputSearch, .inputSelect {
+  background-color: #d6d6d6;
+  border-radius: 8px;
+  padding: 4px;
+  margin: 5px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
+.buttonPagination {
+  width: 5%;
+  padding: 0;
+  margin: 0.1rem;
+}
+
+.form {
+  padding: 10%;
+  display: flex;
+  flex-direction: column;
+}
+
 .container {
   max-width: 600px;
   margin: 0 auto;
@@ -8,16 +50,26 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-family: 'Livvic', sans-serif;
+  
 }
 
 .pokemon-card {
   background-color: #f9f9f9;
+  width: 90%;
+  height: 90%;
   color: #222222;
   padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 2%;
   border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.2s;
+  display: grid;
+  place-items: center;
+  font-family: 'Livvic', sans-serif;
+  
 }
 
 .pokemon-card:hover {
@@ -27,6 +79,7 @@
 .pokemon-name {
   font-weight: bold;
   font-size: 1.2em;
+  font-family: 'Livvic', sans-serif;
 }
 
 .pokemon-type {
@@ -34,28 +87,13 @@
 }
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Livvic', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -64,12 +102,10 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #222222;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+
 
 button {
   border-radius: 8px;
@@ -78,27 +114,17 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #d6d6d6;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: #ffe16e;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+  background-color: #ffe16e;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+
