--- a/pokedex-talent/src/CardModal.css
+++ b/pokedex-talent/src/CardModal.css
@@ -20,21 +20,27 @@
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
     gap: 50px;
+    color: #222222;
 }
 
 .pokemon-modal-name {
     font-size: 25px;
-}
-
-.pokemon-about {
-    padding-top: 10px;
-    text-align: justify;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 60px;
+    padding-top: 5px;
 }
 
 .pokemon-attributes {
     width: 250px;
     font-size: 20px;
+    padding-left: 40px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 .pokemon-attribute {
@@ -44,12 +50,20 @@
 
 .pokemon-types {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 7px;
+    padding-top: 5px;
+    padding-left: 60px;
 }
 
-.modal-title-container {}
+.pokemon-types button {
+    cursor: default;
+}
 
-.modal-title {}
+.pokemon-types button:focus {
+    outline: 0;
+}
 
 .modal-image {
     width: 100%;
@@ -57,6 +71,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-left: 30px;
 }
 
 .modal-close-button {
