--- a/pokedex-talent/src/index.css
+++ b/pokedex-talent/src/index.css
@@ -1,152 +1,147 @@
 @import url('https://fonts.googleapis.com/css2?family=Livvic:wght@300&display=swap');
-
 #root {
-  max-width: 90%;
-  margin: 0 auto;
-
-  text-align: center;
-  background-color: #222222;
+    max-width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #eee;
 }
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .divGeral {
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  max-width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    max-width: 90%;
 }
 
 .logo {
-  width: 40%;
-  height: 40%;
-  margin-top: 8%;
+    width: 40%;
+    height: 40%;
+    margin-top: 5%;
 }
 
-.inputSearch, .inputSelect {
-  background-color:  #ffe16e;;
-  border-radius: 8px;
-  padding: 4px;
-  margin: 5px;
-  font-family: 'Livvic', sans-serif;
-  color:#242424;
+.inputSearch,
+.inputSelect {
+    background-color: #ffe16e;
+    ;
+    border-radius: 8px;
+    padding: 4px;
+    margin: 5px;
+    font-family: 'Livvic', sans-serif;
+    color: #242424;
 }
 
 .pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: 2%;
-  margin-bottom: 4%;
-  max-width: 90%;
+    display: flex;
+    justify-content: center;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    max-width: 90%;
 }
 
 .textoFooter {
-  color: #ffe16e;
-  text-align: center;
-  max-width: 80%;
+    color: #0a0a0a;
+    text-align: center;
+    max-width: 80%;
+    padding-bottom: 30px;
 }
 
-
 .buttonPagination {
-  width: 5%;
-  padding: 0;
-  margin: 0.1rem;
+    width: 5%;
+    padding: 0;
+    margin: 0.1rem;
 }
 
 .form {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 5%;
-
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5%;
+    margin-top: -50px;
 }
 
 .container {
-  margin: 0 1rem;
+    margin: 0 1rem;
 }
 
 .pokemon-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  font-family: 'Livvic', sans-serif;
-  
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    font-family: 'Livvic', sans-serif;
 }
 
 li {
-  margin: 2%;
+    margin: 2%;
 }
 
 .pokemon-card {
-  background-color: #f9f9f9;
-  max-width: 90%;
-  min-width: 50%;
-  height: 90%;
-  color: #222222;
-  padding: 0.5rem;
-  margin-bottom: 2%;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.2s;
-  display: grid;
-  place-items: center;
-  font-family: 'Livvic', sans-serif;
-  
+    background-color: #f9f9f9;
+    max-width: 90%;
+    min-width: 50%;
+    height: 90%;
+    color: #000;
+    padding: 0.8rem;
+    margin-bottom: 2%;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+    display: grid;
+    place-items: center;
+    font-family: 'Livvic', sans-serif;
 }
 
 .pokemon-card:hover {
-  background-color: #d6d6d6;
-  border-color: red;
-  border-style:outset;
-  transition: scale(10);
+    background-color: #d6d6d6;
+    border-color: red;
+    border-style: outset;
+    transition: scale(10);
 }
 
 .pokemon-name {
-  font-weight: bold;
-  font-size: 1.2em;
-  font-family: 'Livvic', sans-serif;
+    font-weight: bold;
+    font-size: 1.2em;
+    font-family: 'Livvic', sans-serif;
 }
 
-
 :root {
-  font-family: 'Livvic', sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: 'Livvic', sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  
-  background-color: #222222;
-  max-width: ;
+    margin: 0;
+    display: flex;
+    place-items: center;
+    background-color: #eee;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #d6d6d6;
-  cursor: pointer;
-  transition: border-color 0.25s;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #ffe16e;
+    cursor: pointer;
+    transition: border-color 0.25s;
+    color: #000;
 }
+
 button:hover {
-  background-color: #ffe16e;
+    background-color: #d6d6d6;
 }
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-  background-color: #ffe16e;
+    outline: 4px auto -webkit-focus-ring-color;
+    background-color: #ffe16e;
 }
-
-
-
