--- a/pokedex-talent/src/index.css
+++ b/pokedex-talent/src/index.css
@@ -3,7 +3,7 @@
     max-width: 90%;
     margin: 0 auto;
     text-align: center;
-    background-color: #eee;
+    background-color: #2c2c2c;
 }
 
 * {
@@ -26,7 +26,7 @@
 
 .inputSearch,
 .inputSelect {
-    background-color: #ffe16e;
+    background-color: #d1d1d1;
     ;
     border-radius: 8px;
     padding: 4px;
@@ -44,7 +44,7 @@
 }
 
 .textoFooter {
-    color: #0a0a0a;
+    color: #ffe16e;
     text-align: center;
     max-width: 80%;
     padding-bottom: 30px;
@@ -120,7 +120,7 @@ body {
     margin: 0;
     display: flex;
     place-items: center;
-    background-color: #eee;
+    background-color: #2c2c2c;
 }
 
 button {
@@ -137,7 +137,7 @@ button {
 }
 
 button:hover {
-    background-color: #d6d6d6;
+    background-color: #d6d6d6; 
 }
 
 button:focus,
